Added DestinationWeather and PlanTrip views. DestinationWeather will be a single page view that shows the user what the current weather and five day forecast is for their upcoming trip. They will be redirected to this page when pushing a "get weather" button on their plan trip page. Added ISearchRequest and IWeatherRequest which contract with WeatherRequest and Eventful inside of services. Created Eventful service which will make an api call based what keyword and location the user inputs. Added WeatherRequest service which can make three different api calls, one to get current weather for a destination, one for the five day forecast, and one for historical weather which will be used to make a recommendation of when to go to the user's chosen destination.

--- a/JungleBook/Views/Travelers/PlanTrip.cshtml
+++ b/JungleBook/Views/Travelers/PlanTrip.cshtml
@@ -13,6 +13,9 @@
     <dl class="row">
     </dl>
 </div>
+<div id="eventsList">
+    
+</div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
