--- a/JungleBook/Views/Travelers/TripDetails.cshtml
+++ b/JungleBook/Views/Travelers/TripDetails.cshtml
@@ -11,24 +11,42 @@
     <h4>Trip</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EstimatedCost)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.EstimatedCost)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.StartDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StartDate)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EndDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.EndDate)
         </dd>
+
+        <dt class="col-sm-2">
+            Destinations
+        </dt>
+       
+        <dd class="col-sm-10">
+            @foreach (var item in Model.Destinations)
+            {
+                @($"{item.Name} ")
+            }
+        </dd>
+        
     </dl>
 </div>
 <div>
