--- a/JungleBook/Views/Travelers/Trips.cshtml
+++ b/JungleBook/Views/Travelers/Trips.cshtml
@@ -9,7 +9,7 @@
 @if (Model.Any() == false)
 {
 <p>
-    <a asp-action="CreateTrip">Create New</a>
+    <a asp-action="CreateTrip">Start Planning A Trip</a>
 </p>
 }
 <table class="table">
@@ -43,9 +43,8 @@
                     @Html.DisplayFor(modelItem => item.EndDate)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.TripId">Edit</a> |
+                    <a asp-action="PlanTrip" asp-route-id="@item.TripId">Plan Trip</a> |
                     @Html.ActionLink("View Trip Details", "TripDetails", new { id = item.TripId }) |
-                    <a asp-action="Delete" asp-route-id="@item.TripId">Delete</a>
                 </td>
             </tr>
     }
