Proof of concept.

--- a/JungleBook/Views/Shared/_Layout.cshtml
+++ b/JungleBook/Views/Shared/_Layout.cshtml
@@ -20,10 +20,16 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Travelers" asp-action="Index">Index</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Travelers" asp-action="CreateTrip">Create Trip</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Travelers" asp-action="ViewMap">View Map</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Travelers" asp-action="Trip Details">Trips</a>
                         </li>
                     </ul>
                 </div>
