--- a/JungleBook/Views/Travelers/_ShowEvents.cshtml
+++ b/JungleBook/Views/Travelers/_ShowEvents.cshtml
@@ -30,7 +30,7 @@
                         <span asp-validation-for="Location" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Search" class="btn btn-primary" id="searchButton" onclick="getEvents()" />
+                        <input type="submit" value="Search" class="btn btn-primary" id="searchButton" />
                     </div>
                 </form>
             </div>
