--- a/JungleBook/Views/Travelers/TripDetails.cshtml
+++ b/JungleBook/Views/Travelers/TripDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model JungleBook.Models.Trip
+﻿@model JungleBook.Models.ViewModels.DetailsViewModel
 
 @{
     ViewData["Title"] = "TripDetails";
@@ -12,28 +12,28 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Trip.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Trip.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EstimatedCost)
+            @Html.DisplayNameFor(model => model.Trip.EstimatedCost)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EstimatedCost)
+            @Html.DisplayFor(model => model.Trip.EstimatedCost)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
+            @Html.DisplayNameFor(model => model.Trip.StartDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
+            @Html.DisplayFor(model => model.Trip.StartDate)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EndDate)
+            @Html.DisplayNameFor(model => model.Trip.EndDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EndDate)
+            @Html.DisplayFor(model => model.Trip.EndDate)
         </dd>
 
         <dt class="col-sm-2">
@@ -41,15 +41,20 @@
         </dt>
        
         <dd class="col-sm-10">
-            @foreach (var item in Model.Destinations)
+            @foreach (var item in Model.Trip.Destinations)
             {
-                @($"{item.Name} ")
+                @($"{item.Name} \n ")
             }
         </dd>
-        
+        <dt>
+           Travel Recommendation
+        </dt>
+        <dd>
+            @Model.Message
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.TripId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Trip.TripId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
