--- a/JungleBook/Views/Shared/_Layout.cshtml
+++ b/JungleBook/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Travelers" asp-action="Index">Index</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Travelers" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Travelers" asp-action="GetCreateTrip">Create Trip</a>
