--- a/JungleBook/Views/Travelers/Index.cshtml
+++ b/JungleBook/Views/Travelers/Index.cshtml
@@ -1,11 +1,12 @@
-﻿
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Dashboard</h1>
-
 @using (Html.BeginForm("AddInvitedTraveler", "Travelers", FormMethod.Post))
 {
     <div class="col-4">
@@ -21,7 +22,7 @@
                     <input class="" type="text" name="tripName" />
                 </div>
             </div>
-            <input style ="background-color: forestgreen" class="btn-block" type="submit" value="Submit" />
+            <input style="background-color: forestgreen" class="btn-block" type="submit" value="Submit" />
         </div>
     </div>
 
