Corrected spacing error with other views revolving around having two div rows when there should have only been one. Updated select interests partial to more accurately describe user's action option.  Updated the id of the div in show events partial. Changed the div from a set 4 to auto. Changed h1 to h5

--- a/JungleBook/Views/Travelers/PlanTrip.cshtml
+++ b/JungleBook/Views/Travelers/PlanTrip.cshtml
@@ -17,32 +17,30 @@
     <p>
         <button class="btn btn-primary" data-toggle="collapse" data-target=".multi-collapse" role="button" aria-expanded="false" aria-controls="EmailWindow SearchEvents SelectInterests">Open All Tabs</button>
         <button class="btn btn-primary" data-toggle="collapse" data-target="#SelectInterests" role="button" aria-expanded="false" aria-controls="SelectInterests">Select Some Interests</button>
-        <button class="btn btn-primary" data-toggle="collapse" data-target="#SearchEvents" role="button" aria-expanded="false" aria-controls="EmailWindow">Look Up Events</button>
+        <button class="btn btn-primary" data-toggle="collapse" data-target="#SearchEvents" role="button" aria-expanded="false" aria-controls="SearchEvents">Look Up Events</button>
         <button class="btn btn-primary" data-toggle="collapse" data-target="#EmailWindow" role="button" aria-expanded="false" aria-controls="EmailWindow">Invite Others To Your Trip!</button>
     </p>
 </div>
 <div class="row">
     <div class="col">
         <div class="collapse multi-collapse" id="SelectInterests">
-            <div class="card card-body" id="eventsPartial">
+            <div class="card card-body" id="interestsPartial">
                 @await Html.PartialAsync("~/Views/Travelers/_SelectInterests.cshtml", Model)
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
-            <div class="collapse multi-collapse" id="SearchEvents">
-                <div class="card card-body" id="eventsPartial">
-                    @await Html.PartialAsync("~/Views/Travelers/_ShowEvents.cshtml", Model)
-                </div>
+    <div class="col">
+        <div class="collapse multi-collapse" id="SearchEvents">
+            <div class="card card-body" id="eventsPartial">
+                @await Html.PartialAsync("~/Views/Travelers/_ShowEvents.cshtml", Model)
             </div>
         </div>
+    </div>
 
-        <div class="col">
-            <div class="multi-collapse collapse" id="EmailWindow">
-                <div class="card card-body" id="emailPartial">
-                    @await Html.PartialAsync("~/Views/Travelers/_TripInvitationPartial.cshtml", Model)
-                </div>
+    <div class="col">
+        <div class="multi-collapse collapse" id="EmailWindow">
+            <div class="card card-body" id="emailPartial">
+                @await Html.PartialAsync("~/Views/Travelers/_TripInvitationPartial.cshtml", Model)
             </div>
         </div>
     </div>
