--- a/JungleBook/Views/Travelers/_TripInvitationPartial.cshtml
+++ b/JungleBook/Views/Travelers/_TripInvitationPartial.cshtml
@@ -11,9 +11,9 @@
 <div class="container-fluid">
     @if (SignInManager.IsSignedIn(User))
     {
-        <h1>Send Invitations</h1>
+        <h5>Send Invitations</h5>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-auto">
                 <form asp-action="SendInvitations" asp-controller="Travelers">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" asp-for="TravelerLoggedIn.TravelerId" />
