Updated using statements within login, logout, and register Identity methods. Updated using statements within TravelersController and HomeController. Modified navbar in the shared layout file and updated css for styling changes. Added image to site.

--- a/JungleBook/Views/Shared/_Layout.cshtml
+++ b/JungleBook/Views/Shared/_Layout.cshtml
@@ -6,13 +6,13 @@
     <title>@ViewData["Title"] - JungleBook</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-</head>
+</head> 
 <body>
     <header>
-        <nav id="NavBar" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav id="NavBar" class="navbar navbar-expand-sm navbar-toggleable-sm">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">JungleBook</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <button id="navbarHamburger"class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -20,16 +20,16 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Travelers" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Travelers" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Travelers" asp-action="GetCreateTrip">Create Trip</a>
+                            <a class="nav-link" asp-area="" asp-controller="Travelers" asp-action="GetCreateTrip">Create Trip</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Travelers" asp-action="ViewMap">View Map</a>
+                            <a class="nav-link" asp-area="" asp-controller="Travelers" asp-action="ViewMap">View Map</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Travelers" asp-action="Trips">Trips</a>
+                            <a class="nav-link" asp-area="" asp-controller="Travelers" asp-action="Trips">Trips</a>
                         </li>
                     </ul>
                 </div>
@@ -42,7 +42,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="footer text-muted">
         <div class="container">
             &copy; 2020 - JungleBook - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
