--- a/JungleBook/wwwroot/css/site.css
+++ b/JungleBook/wwwroot/css/site.css
@@ -1,30 +1,57 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+*
+{
+    color: forestgreen
+}
+#NavBar
+{
+    background-color: transparent;
+}
+.nav-link:hover{
+    color: firebrick;
 }
 
-/* Provide sufficient contrast against white background */
+#NavBarLogoutButton.nav-link.btn{
+    color: forestgreen;
+}
+#NavBarLogoutButton.nav-link.btn:hover {
+    color: firebrick;
+}
 a {
-  color: #0366d6;
+  color: forestgreen;
 }
-
+a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+}
+a.navbar-brand:hover {
+    color: firebrick;
+}
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+  color: forestgreen;
+  background-color: navajowhite;
+  border-color: forestgreen;
+}
+.btn-primary:hover{
+    color: navajowhite;
+    background-color: forestgreen;
+    border-color: navajowhite;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+span.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='forestgreen' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    color: green;
+}
+.nav-pills .nav-item .nav-link.active, .nav-pills .show > .nav-link .nav-link:hover  {
+    color: #fff;
+    background-color: #ffff99;
+    border-color: #1861ac;
 }
 
-/* Sticky footer styles
+
+}/* Sticky footer styles
 -------------------------------------------------- */
 html {
   font-size: 14px;
@@ -58,10 +85,16 @@ html {
   min-height: 100%;
 }
 
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+body {    
+    /*Background image*/
+    height: 100% !important;
+    background-image: url(../images/landing_page_2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;    
+/*     Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -69,6 +102,8 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
-#NavBar{
-    background:forestgreen;
+table:hover
+{
+    background-color: navajowhite;
+    opacity: 0.7;
 }
