Updated CreateTrip View to show labels for a trip's estimated cost, start date, and end date. Corrected naming on model property used within the form. Updated the index view to have a label used within the css styling file. Updated the Id's for the partial views rendered in PlanTrip. Updated the _SelectInterests partial to use the renamed property within the view model. The partial view now uses its own view model instead of one large view model.

--- a/JungleBook/Views/Travelers/Index.cshtml
+++ b/JungleBook/Views/Travelers/Index.cshtml
@@ -1,15 +1,18 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Dashboard</h1>
+<div>
+<h1 id="h1Text">Dashboard</h1>
+
 @using (Html.BeginForm("AddInvitedTraveler", "Travelers", FormMethod.Post))
 {
-    <div class="col-4">
+    <div class="col-4" id="invitationElements">
         <div class="input-group">
             <div class="card-group">
                 <div class="card-body">
@@ -22,10 +25,10 @@
                     <input class="" type="text" name="tripName" />
                 </div>
             </div>
-            <input style="background-color: forestgreen" class="btn-block" type="submit" value="Submit" />
+            <input class="btn-block" type="submit" value="Submit" />
         </div>
     </div>
 
 }
-
+</div>
 
