--- a/JungleBook/Views/Travelers/CreateTrip.cshtml
+++ b/JungleBook/Views/Travelers/CreateTrip.cshtml
@@ -20,17 +20,17 @@
                 <span asp-validation-for="Trip.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Trip.EstimatedCost" class="control-label"></label>
+                <label asp-for="Trip.EstimatedCost" class="control-label">Estimated Cost</label>
                 <input asp-for="Trip.EstimatedCost" class="form-control" />
                 <span asp-validation-for="Trip.EstimatedCost" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Trip.StartDate" class="control-label"></label>
+                <label asp-for="Trip.StartDate" class="control-label">Start Date</label>
                 <input asp-for="Trip.StartDate" class="form-control" />
                 <span asp-validation-for="Trip.StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Trip.EndDate" class="control-label"></label>
+                <label asp-for="Trip.EndDate" class="control-label">End Date</label>
                 <input asp-for="Trip.EndDate" class="form-control" />
                 <span asp-validation-for="Trip.EndDate" class="text-danger"></span>
             </div>
@@ -38,9 +38,9 @@
 
             </div>
             <div class="form-group">
-                @using (Html.BeginForm(Model.selectedDestinations))
+                @using (Html.BeginForm(Model.SelectedDestinations))
                 {
-                    @Html.ListBoxFor(m => m.selectedDestinations, Model.DestinationOptions, Model.selectedDestinations)
+                    @Html.ListBoxFor(m => m.SelectedDestinations, Model.DestinationOptions, Model.SelectedDestinations)
                     <input type="submit" value="Create" class="btn btn-primary" />
                 }
             </div>
