Updated ShowEvents partial and Trip Invitation partial. Updated using statemetns on the viewimports partial.

--- a/JungleBook/Views/_ViewImports.cshtml
+++ b/JungleBook/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using JungleBook
-@using JungleBook.Models
+@using JungleBook.Models.ViewModels
+@using Domain.Models
+@using Infrastructure.Identity
+@using Domain; 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
