--- a/JungleBook/Views/Travelers/_ShowEvents.cshtml
+++ b/JungleBook/Views/Travelers/_ShowEvents.cshtml
@@ -1,4 +1,4 @@
-﻿@model JungleBook.Models.ViewModels.TripViewModel
+﻿@model JungleBook.Models.ViewModels.EventSearchViewModel
 
 @{
     ViewData["Title"] = "ShowEvents";
@@ -13,12 +13,9 @@
     <div class="row">
         <div class="col-sm-auto">
             <div class="collapse" id="searchEvents">
-                <form asp-action="ShowEvents" asp-controller="Travelers" >
+                <form id="EventSearchForm"  asp-action="SearchEvents" asp-controller="Travelers" >
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" asp-for="Trip.TripId" />
-                    @Html.HiddenFor(m => m.Trip)
-                    @Html.HiddenFor(m => m.DayActivities)
-                    @Html.HiddenFor(m => m.Message)
                     <div class="form-group">
                         <label asp-for="Keyword" class="control-label"></label>
                         <input asp-for="Keyword" class="form-control" />
@@ -29,8 +26,8 @@
                         <input asp-for="Location" class="form-control" />
                         <span asp-validation-for="Location" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
-                        <input type="submit" value="Search" class="btn btn-primary" id="searchButton" />
+                    <div>
+                        <input type="submit" class="btn btn-primary" id="EventSearchButton" value="Search" /> 
                     </div>
                 </form>
             </div>
@@ -41,7 +38,7 @@
         <div class="container">
             <div class="col">
                 <div class="card-columns">
-                    @foreach (Event item in Model.SearchResults.events.Event)
+                    @foreach (var item in Model.SearchResults.events.Event)
                     {
                         <div class="card">
                             @if (item.image != null)
