--- a/JungleBook/Views/Travelers/_TripInvitationPartial.cshtml
+++ b/JungleBook/Views/Travelers/_TripInvitationPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
-@model JungleBook.Models.ViewModels.TripViewModel
+@model JungleBook.Models.ViewModels.TripInvitationViewModel
 
 @{
     ViewData["Title"] = "SendInvitations";
@@ -13,30 +13,81 @@
     {
         <h5>Send Invitations</h5>
         <div class="row">
-            <div class="col-md-auto">
-                <form asp-action="SendInvitations" asp-controller="Travelers">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <input type="hidden" asp-for="TravelerLoggedIn.TravelerId" />
-                    <input type="hidden" asp-for="Trip.TripId" />
-                    <input type="hidden" asp-for="Message.SenderAddress" />
-                    <div class="form-group">
-                        <label asp-for="Message.RecipientAddress" class="control-label"></label>
-                        <input asp-for="Message.RecipientAddress" class="form-control" />
-                        <span asp-validation-for="Message.RecipientAddress" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Message.MessageBody" class="control-label"></label>
-                        <textarea asp-for="Message.MessageBody" class="form-control"></textarea>
-                        <span asp-validation-for="Message.MessageBody" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" value="Send" class="btn btn-primary" />
-                    </div>
-                </form>
-            </div>
+            @if (Model.SentSuccessfully == null)
+            {
+                <div class="col-md-auto">
+                    <form id="EmailInvitationForm" asp-action="SendInvitations" asp-controller="Travelers">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <input type="hidden" asp-for="TravelerLoggedIn" />
+                        <input type="hidden" asp-for="Trip.TripId" />
+                        <input type="hidden" asp-for="Message.SenderAddress" />
+                        <div class="form-group">
+                            <label asp-for="Message.RecipientAddress" class="control-label"></label>
+                            <input asp-for="Message.RecipientAddress" class="form-control" />
+                            <span asp-validation-for="Message.RecipientAddress" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Message.MessageBody" class="control-label"></label>
+                            <textarea asp-for="Message.MessageBody" class="form-control"></textarea>
+                            <span asp-validation-for="Message.MessageBody" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Send" class="btn btn-primary" />
+                        </div>
+                    </form>
+                </div>
+            }
+            @if (Model.SentSuccessfully == false)
+            {
+                <p> if this fails, it will prompt them to try again and autofill message box</p>
+                <div class="col-md-auto">
+                    <form id="EmailInvitationForm" asp-action="SendInvitations" asp-controller="Travelers">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <input type="hidden" asp-for="TravelerLoggedIn" />
+                        <input type="hidden" asp-for="Trip.TripId" />
+                        <input type="hidden" asp-for="Message.SenderAddress" />
+                        <div class="form-group">
+                            <label asp-for="Message.RecipientAddress" class="control-label"></label>
+                            <input asp-for="Message.RecipientAddress" class="form-control" />
+                            <span asp-validation-for="Message.RecipientAddress" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Message.MessageBody" class="control-label"></label>
+                            <textarea asp-for="Message.MessageBody" class="form-control">@Model.Message.MessageBody</textarea>
+                            <span asp-validation-for="Message.MessageBody" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Send" class="btn btn-primary" />
+                        </div>
+                    </form>
+                </div>
+            }
+            @if (Model.SentSuccessfully == true)
+            {
+                
+                <div class="col-md-auto">
+                    <p> This Will be where a success message to user shows up with an option to send more invites.</p>
+                    @*<form id="EmailInvitationForm" asp-action="SendInvitations" asp-controller="Travelers">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <input type="hidden" asp-for="TravelerLoggedIn.TravelerId" />
+                        <input type="hidden" asp-for="Trip.TripId" />
+                        <input type="hidden" asp-for="Message.SenderAddress" />
+                        <div class="form-group">
+                            <label asp-for="Message.RecipientAddress" class="control-label"></label>
+                            <input asp-for="Message.RecipientAddress" class="form-control" />
+                            <span asp-validation-for="Message.RecipientAddress" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Message.MessageBody" class="control-label"></label>
+                            <textarea asp-for="Message.MessageBody" class="form-control"></textarea>
+                            <span asp-validation-for="Message.MessageBody" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Send" class="btn btn-primary" />
+                        </div>
+                    </form>*@
+                </div>
+            }
         </div>
     }
-</div>
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
